AKS/Ingress/app1ClusterIPSvc.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp1-clusterip-service
  labels:
    app: myapp1clusterIPsvc
spec:
  type: ClusterIP
  selector:
    app: myapp1
  ports:
  - port: 80
    targetPort: 80
