AKS/Ingress/app2ClusterIPSvc.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp2-clusterip-service
  labels:
    app: myapp2clusterIPsvc
spec:
  type: ClusterIP
  selector:
    app: myapp2
  ports:
  - port: 80
    targetPort: 80
